# Learning-C

./: LICENCE  README.md
pointers/testing/: .gitignore  CMakeLists.txt  Makefile  README.md  learning  testing
pointers/testing/include/: typedef.h
pointers/testing/src/: House.c  House.h  main.c
